--- a/ReactNativeBegin/ios/Podfile
+++ b/ReactNativeBegin/ios/Podfile
@@ -10,6 +10,10 @@ target 'ReactNativeBegin' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
   target 'ReactNativeBeginTests' do
     inherit! :complete
     # Pods for testing
