--- a/ReactNativeBegin/package.json
+++ b/ReactNativeBegin/package.json
@@ -10,16 +10,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
     "axios": "^0.19.2",
+    "expo": "^38.0.9",
+    "expo-location": "~8.2.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-unimodules": "^0.10.1",
     "react-native-vector-icons": "^7.0.0"
   },
   "devDependencies": {
